--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ckeditor/ckeditor5-block-quote": "^36.0.1",
     "@ckeditor/ckeditor5-cloud-services": "^36.0.1",
     "@ckeditor/ckeditor5-code-block": "^36.0.1",
+    "@ckeditor/ckeditor5-core": "^36.0.1",
     "@ckeditor/ckeditor5-dev-translations": "^32.1.2",
     "@ckeditor/ckeditor5-dev-utils": "^32.1.2",
     "@ckeditor/ckeditor5-editor-classic": "^36.0.1",
@@ -43,13 +44,15 @@
     "@ckeditor/ckeditor5-theme-lark": "^36.0.1",
     "@ckeditor/ckeditor5-typing": "^36.0.1",
     "@ckeditor/ckeditor5-word-count": "^36.0.1",
-    "@ckeditor/ckeditor5-core": "^36.0.1",
     "css-loader": "^5.2.7",
+    "marked": "^4.3.0",
     "postcss": "^8.4.21",
     "postcss-loader": "^4.3.0",
     "raw-loader": "^4.0.2",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^4.2.3",
+    "turndown": "^7.1.2",
+    "turndown-plugin-gfm": "^1.0.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0"
   },
