--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "@ckeditor/ckeditor5-theme-lark": "^36.0.1",
     "@ckeditor/ckeditor5-typing": "^36.0.1",
     "@ckeditor/ckeditor5-word-count": "^36.0.1",
+    "@octokit/rest": "^19.0.7",
     "css-loader": "^5.2.7",
+    "katex": "^0.16.4",
     "marked": "^4.3.0",
+    "marked-emoji": "^1.0.1",
     "postcss": "^8.4.21",
     "postcss-loader": "^4.3.0",
     "raw-loader": "^4.0.2",
@@ -58,5 +61,8 @@
   },
   "scripts": {
     "build": "webpack --mode production"
+  },
+  "dependencies": {
+    "marked-mfm": "^0.5.0"
   }
 }
